# acdp

./: Cargo.toml  README.md
acdp-auth/: ARC_ZK_INTEGRATION_COMPLETE.md  CMZ14_ADAPTATION_COMPLETE.md  CMZ14_MACGGM_ANALYSIS.md  Cargo.toml  README.md  SIGMA_LIBRARY_COMPARISON.md  SWIFT_CRYPTO_ARC_ANALYSIS.md  TASK2_STATUS.md
acdp-auth/src/: agent.rs  arc.rs  arc_zkp.rs  capabilities.rs  credentials.rs  delegation.rs  error.rs  gateway.rs  lib.rs  mcp.rs  principal.rs  verification.rs
acdp-cli/: Cargo.toml  build.rs
acdp-cli/src/: commands.rs  main.rs
acdp-common/: Cargo.toml
acdp-common/src/: commands.rs  gencode.rs  lib.rs  messages.rs  types.rs
acdp-common/tests/: ipc_integration_tests.rs  ipc_tests.rs  mcp_tests.rs  messages_tests.rs  types_tests.rs
acdp-core/: Cargo.toml
acdp-core/src/: client.rs  error.rs  interceptor.rs  lib.rs
acdp-core/src/messages/: core.rs  initialization.rs  mod.rs
acdp-core/src/transport/: config.rs  factory.rs  http_sse.rs  mod.rs
acdp-gateway/: .env.example  Cargo.toml  INTERFACES.md  README.md
acdp-gateway/acdp-common/: Cargo.toml
acdp-gateway/acdp-common/src/: error.rs  lib.rs  types.rs
acdp-gateway/acdp-server/: Cargo.toml
acdp-gateway/acdp-server/migrations/: 20241109000001_create_acdp_credentials.sql
acdp-gateway/acdp-server/src/: main.rs
acdp-gateway/acdp-server/src/routes/: credential_issue.rs  credential_verify.rs  delegation.rs  health.rs  mod.rs
acdp-gateway/acdp-server/src/services/: credential.rs  id_jag.rs  mod.rs  rauthy_client.rs
acdp-llm/: Cargo.toml  README_LITERT.md  build.rs
acdp-llm/examples/: chat.rs  test_features.rs
acdp-llm/include/: litert_lm_rust_api.cc  litert_lm_rust_api.h
acdp-llm/src/: config.rs  conversation_context.rs  dspy_predictor.rs  dspy_signatures.rs  error.rs  gepa_optimizer.rs  interceptor.rs  lib.rs  litert_wrapper.rs  lm_provider.rs  metrics.rs  model_management.rs  predictors.rs  routing_modes.rs  service.rs  session_management.rs  signatures.rs  streaming.rs
acdp-llm/src/database/: gepa.rs  metrics.rs  mod.rs  predictions.rs  routing_rules.rs  schema.rs
acdp-sandbox/: ARCHITECTURE.md  Cargo.toml
acdp-sandbox/examples/: python_all_runtimes.rs  reconnect.rs  security_policy_demo.rs  simple.rs  v8_javascript.rs  v8_snapshot.rs  v8_timeout_test.rs  v8_worker.rs  v8_worker_simple.rs  wasm_hello.rs
acdp-sandbox/src/: execution.rs  gencode.rs  lib.rs  limits.rs  policy.rs  runtime.rs  selector.rs  service.rs  types.rs
acdp-sandbox/src/runtime/: process.rs  snapshot.rs  wasm.rs
acdp-sandbox/src/runtime/v8/: mod.rs  snapshot.rs  worker.rs
acdp-transport/: Cargo.toml  build.rs
acdp-transport/src/: backend_connection.rs  buffered_ipc_client.rs  http_handler.rs  http_sse_server.rs  http_stream_server.rs  ipc_server.rs  lib.rs  main.rs  proxy.rs  stdio_handler.rs  transport_config.rs
acdp-transport/src/interceptors/: logging.rs  mod.rs  rate_limit.rs  transform.rs  validation.rs
acdp-transport/tests/: buffered_ipc_client_tests.rs  interceptor_integration_tests.rs  stdio_handler_tests.rs
acdp-tui/: Cargo.toml  INTEGRATION_COMPLETE.md  INTEGRATION_PROGRESS.md  INTEGRATION_STATUS.md  STATUS_BAR_COMPLETE.md  UI_REDESIGN.md  build.rs
acdp-tui/src/: acdp_server.rs  acme.rs  activity_feed.rs  app.rs  app.rs.bak9  app.rs.before_sed  client_proxy.rs  clients_panel.rs  colors.rs  components.rs  config.rs  diagnostics.rs  events.rs  http_server.rs  ipc_handler.rs  lib.rs  llm_responses_panel.rs  main.rs  query_input.rs  quick_access.rs  semantic_status.rs  servers_panel.rs  settings_panel.rs  status_bar.rs  tabs.rs  ui.rs  ui_old.rs
tests/: Cargo.toml
tests/common/: helpers.rs  mod.rs  python_server.rs  test_server.rs  test_server_http.py
tests/e2e/: README.md  full_system_tests.rs  mod.rs  multi_proxy_routing_test.rs
tests/integration/: http_server_tests.rs  llm_integration_tests.rs  mcp_server_tests.rs  mod.rs  transport_core_tests.rs
