[workspace]
resolver = "2"
members = [
    "acdp-server",
    "acdp-common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ACDP Team"]
license = "Apache-2.0"

[workspace.dependencies]
# ACDP workspace crates
acdp-common = { path = "acdp-common" }
mcp-auth = { path = "../mcp-auth" }

# Actix web framework
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-lab = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for Rauthy integration)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Cryptography
ed25519-compact = { version = "2.0.4", features = ["ed25519"] }
jsonwebtoken = "9"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
toml = "0.8"
dotenvy = "0.15"

# Database (reuse Rauthy's PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Hex encoding
hex = "0.4"

# P256 (for ARC)
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "hash2curve"] }
